--- a/templates/about.html
+++ b/templates/about.html
@@ -6,6 +6,7 @@
             <div class="col">
                 <h1>this is About page</h1>
                 <p>This is additional text paragraph...</p>
+                <p>This came from the args {{ index .StringMap "test" }}</p>
             </div>
         </div>
     </div>
